# PIAR_Software

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/pn532/: CMakeLists.txt  README.md  pn532.c
components/pn532/include/: ntag213.h  pn532.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/certs/: certificate.pem
main/include/: api_requests.h  buzzer_i2c.h  display_functions.h  hc_sr04.h  init.h  pump_control.h  setup.h  tasks.h  valve_control.h  ws2812_led_strip.h
main/src/: api_requests.c  buzzer_i2c.c  display_functions.c  hc_sr04.c  init.c  pump_control.c  setup.c  tasks.c  valve_control.c  ws2812_led_strip.c
